--- a/Minion Says/Base.lproj/Main.storyboard
+++ b/Minion Says/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="hPl-Ch-B4m">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="hPl-Ch-B4m">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -12,6 +13,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="SDd-z5-dSz">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.99668560606060608" green="0.77039431336756492" blue="0.092745555280612402" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="Cde-Qw-5kO" kind="relationship" relationship="rootViewController" id="KQo-BB-OSD"/>
@@ -19,9 +21,9 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H7S-8e-Skm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-529" y="66"/>
+            <point key="canvasLocation" x="-991.875" y="69.718309859154928"/>
         </scene>
-        <!--Main View Controller-->
+        <!--Minions Says-->
         <scene sceneID="vid-6l-BxQ">
             <objects>
                 <viewController id="Cde-Qw-5kO" customClass="MSMainViewController" sceneMemberID="viewController">
@@ -30,27 +32,35 @@
                         <viewControllerLayoutGuide type="bottom" id="Aba-nn-mvk"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="gFU-pA-qp5">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Her-dD-xsQ">
-                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Her-dD-xsQ">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <connections>
                                     <segue destination="BJX-y1-4vd" kind="embed" identifier="MSEmbedContainer" id="V0h-eU-09S"/>
                                 </connections>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Her-dD-xsQ" firstAttribute="bottom" secondItem="Aba-nn-mvk" secondAttribute="top" id="CuC-lI-qkW"/>
+                            <constraint firstItem="Her-dD-xsQ" firstAttribute="leading" secondItem="gFU-pA-qp5" secondAttribute="leading" id="Of8-Fy-5wK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Her-dD-xsQ" secondAttribute="trailing" constant="-16" id="d6k-HC-ph9"/>
+                            <constraint firstItem="Her-dD-xsQ" firstAttribute="top" secondItem="4HA-AO-tEy" secondAttribute="bottom" id="fbc-Ei-7im"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="B3v-dN-mko">
-                        <barButtonItem key="leftBarButtonItem" title="Item" id="od0-2f-El0">
+                    <navigationItem key="navigationItem" title="Minions Says" id="B3v-dN-mko">
+                        <barButtonItem key="leftBarButtonItem" title="Layout" id="od0-2f-El0">
+                            <color key="tintColor" red="0.396188447" green="0.396188447" blue="0.396188447" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="actionChangeView:" destination="Cde-Qw-5kO" id="MoO-Z0-zst"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="yQA-Ym-SnN">
+                            <color key="tintColor" red="0.396188447" green="0.396188447" blue="0.396188447" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
-                                <segue destination="xAT-kW-XBp" kind="push" id="5fz-sp-1pw"/>
+                                <segue destination="xAT-kW-XBp" kind="show" id="5fz-sp-1pw"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -60,7 +70,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Qi-2Z-lSE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-121" y="66"/>
+            <point key="canvasLocation" x="-227" y="69"/>
         </scene>
         <!--Add View Controller-->
         <scene sceneID="TiD-rx-hkW">
@@ -71,22 +81,41 @@
                         <viewControllerLayoutGuide type="bottom" id="RR8-bn-aPb"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="lKt-G3-8I0">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tJe-qZ-MQP">
-                                <rect key="frame" x="63" y="165" width="194" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What minion wants to say?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVZ-f0-T5K">
+                                <rect key="frame" x="131" y="129" width="339" height="67"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="339" id="ODe-YL-7TC"/>
+                                    <constraint firstAttribute="height" constant="67" id="qJ5-V9-pDN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                <color key="textColor" red="0.88616635101010099" green="0.60395920563220207" blue="0.1145849205521073" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter text                                        " textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="tJe-qZ-MQP">
+                                <rect key="frame" x="170" y="204" width="261" height="30"/>
+                                <color key="backgroundColor" red="0.99668560610000001" green="0.86410837274207664" blue="0.4692352868826607" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <connections>
                                     <outlet property="delegate" destination="xAT-kW-XBp" id="Cbg-Q9-wLB"/>
                                 </connections>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="tJe-qZ-MQP" firstAttribute="top" secondItem="cVZ-f0-T5K" secondAttribute="bottom" constant="8" symbolic="YES" id="BlI-ru-7cg"/>
+                            <constraint firstItem="cVZ-f0-T5K" firstAttribute="top" secondItem="tIw-V2-j7S" secondAttribute="bottom" constant="65" id="Cxv-hl-Ke6"/>
+                            <constraint firstItem="cVZ-f0-T5K" firstAttribute="centerX" secondItem="tJe-qZ-MQP" secondAttribute="centerX" id="Dp3-pg-SEU"/>
+                            <constraint firstItem="cVZ-f0-T5K" firstAttribute="centerX" secondItem="lKt-G3-8I0" secondAttribute="centerX" id="aHY-Xi-jlh"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="De4-sd-YMf">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="qJ4-Fj-0eZ">
+                            <color key="tintColor" red="0.36454387630000001" green="0.36454387630000001" blue="0.36454387630000001" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
                                 <action selector="actionSave:" destination="xAT-kW-XBp" id="Pwv-7d-fkU"/>
                             </connections>
@@ -98,14 +127,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q2c-MJ-NEL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-119" y="831"/>
+            <point key="canvasLocation" x="-224" y="877"/>
         </scene>
         <!--Minion Says-->
         <scene sceneID="Tuk-8n-4yL">
             <objects>
                 <tableViewController storyboardIdentifier="MSTableViewControllerIdentifier" id="MLy-BI-l6K" customClass="MSTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" id="MHa-jG-iuS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="sectionIndexColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -123,7 +152,7 @@
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
+                                            <color key="highlightedColor" red="0.36454387630000001" green="0.36454387630000001" blue="0.36454387630000001" alpha="1" colorSpace="calibratedRGB"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="adj-OX-O6g">
                                             <rect key="frame" x="1" y="1" width="77" height="77"/>
@@ -157,36 +186,37 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NbS-W7-EDJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="734" y="412"/>
+            <point key="canvasLocation" x="1376.25" y="435.21126760563379"/>
         </scene>
         <!--Collection View Controller-->
         <scene sceneID="cNH-HP-p8s">
             <objects>
                 <collectionViewController storyboardIdentifier="MSCollectionViewControllerIdentifier" id="PNQ-sD-oTX" customClass="MSCollectionViewController" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="tZc-nD-kGz">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="byB-mT-Oy6">
-                            <size key="itemSize" width="100" height="100"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="15" minimumInteritemSpacing="0.0" id="byB-mT-Oy6">
+                            <size key="itemSize" width="90" height="90"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="15" minY="15" maxX="15" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MSCollectionCellIdentifier" id="e25-4p-td5" customClass="MSCollectionViewCell">
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GKg-Ps-tUP">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                         </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
-                                <size key="customSize" width="100" height="100"/>
+                                <size key="customSize" width="90" height="90"/>
                                 <connections>
                                     <outlet property="contentImage" destination="GKg-Ps-tUP" id="YVo-pQ-SPe"/>
                                 </connections>
@@ -200,7 +230,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UCo-EC-gwU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="734" y="-228"/>
+            <point key="canvasLocation" x="1376.25" y="-240.8450704225352"/>
         </scene>
         <!--Container View Controller-->
         <scene sceneID="Pzb-lZ-NAq">
@@ -211,7 +241,7 @@
                         <viewControllerLayoutGuide type="bottom" id="UZ7-ho-Gff"/>
                     </layoutGuides>
                     <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="s8d-rO-U3W">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -220,12 +250,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZZc-qk-J8w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="320" y="66"/>
+            <point key="canvasLocation" x="600" y="69.718309859154928"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
